# SenWeaver

./: LICENSE  README.md
backend/: .env.example  .gitignore  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/app/: app.py
backend/app/common/: common.py  config.yaml
backend/app/common/api/: common.py
backend/app/common/core/: schemas.py
backend/app/common/logic/: common_logic.py
backend/app/common/public/: index.html
backend/app/system/: config.yaml  system.py
backend/app/system/api/: common.py  config.py  dashboard.py  dept.py  dict.py  field.py  file.py  logs.py  menu.py  permission.py  post.py  role.py  routes.py  rules.py  search.py  user.py
backend/app/system/core/: websocket.py
backend/app/system/logic/: common_logic.py  config_logic.py  dashboard_logic.py  dept_logic.py  dict_logic.py  field_logic.py  menu_logic.py  permission_logic.py  role_logic.py  user_logic.py
backend/app/system/model/: __init__.py  (+26 more)
backend/config/: settings.py
backend/plugins/: plugins.py
backend/plugins/cmd/: README.md  cmd.py  config.yaml  helper.py  pyproject.toml
backend/plugins/notifications/: README.md  config.yaml  notifications.py
backend/plugins/settings/: config.yaml  settings.py
backend/senweaver/: README.md  __init__.py  constants.py  helper.py  logger.py  server.py
backend/senweaver/auth/: auth.py  constants.py  filter.py  helper.py  manager.py  models.py  router.py  schemas.py  security.py
backend/senweaver/command/: __init__.py  helper.py
backend/senweaver/core/: helper.py  models.py  schemas.py  senweaver_creator.py  senweaver_crud.py  senweaver_route.py  senweaver_router.py
backend/senweaver/db/: __init__.py  helper.py  session.py  types.py
backend/senweaver/exception/: exception_handler.py  helper.py  http_exception.py
backend/senweaver/middleware/: access.py  db.py  file.py
backend/senweaver/module/: __init__.py  app.py  base.py  helper.py  manager.py  plugin.py  settings.py  vendor.py
backend/senweaver/utils/: data.py  encrypt.py  generics.py  globals.py  partial.py  pydantic.py  request.py  response.py  snowflake.py  translation.py
(+106 files in other folders)
